# pycuda

./: .gitignore  CMakeLists.txt  flake.nix  pycuda.nix
src/kernels/: CMakeLists.txt  add_kernel.cu
